--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.5.3"
+    "hubot-slack": "^4.5.3",
+    "hubot-tell": "^1.2.4"
   },
   "engines": {
     "node": ">= 0.8.x"
