--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "hubot": "^3.1.1",
+    "hubot-calculator": "^0.4.0",
     "hubot-circleci": "^0.8.1",
     "hubot-diagnostics": "0.0.2",
     "hubot-google-images": "^0.2.7",
